<resources>
    <string name="app_name">Class register</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">WTF</string>

    <string name="secondNamePlaceholder">Your surname</string>
    <string name="secondNameLabel">Surname</string>
    <string name="firstNamePlaceholder">Your name</string>
    <string name="firstNameLabel">Name</string>
    <string name="register">Present!</string>
    <string name="checkMarks">Check marks</string>
    <string name="changeMark">Change mark</string>
    <string name="studentId">Your id</string>
    <string name="newMark">New mark</string>

</resources>
