<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

       <EditText
            android:id="@+id/idOfStudent"
            android:hint="@string/studentId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

     <Button
            android:id="@+id/checkMarks"
            android:layout_height="wrap_content"
            android:text="@string/checkMarks"
            android:onClick="checkMarks"
            android:layout_width="fill_parent"/>

        <EditText
            android:id="@+id/newMark"
            android:hint="@string/newMark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/changeMark"
            android:layout_height="wrap_content"
            android:text="@string/changeMark"
            android:onClick="changeMark"
            android:layout_width="fill_parent"/>

        <TextView
            android:id="@+id/feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"/>
    </LinearLayout>
</ScrollView>
