<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/firstName"
            android:hint="@string/firstNamePlaceholder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/lastName"
            android:hint="@string/secondNamePlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="register"
            android:layout_width="fill_parent"/>

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"/>
    </LinearLayout>
</ScrollView>
